--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
       <!-- End Google Tag Manager -->
 
     <meta charset="UTF-8" />
+    <meta name="heleket" content="49083763" />
     <link rel="icon" type="image/svg+xml" href="/img/favicon.ico" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
